--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- Permissões necessárias -->
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
-
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -16,11 +17,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Prototipo"
         tools:targetApi="31">
+
+        <!-- Atividades -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-
             android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,6 +34,7 @@
         <activity android:name=".HorarioActivity" />
         <activity android:name=".CalendarioActivity" />
 
+        <!-- Receiver para notificações e eventos de inicialização -->
         <receiver android:name=".ReminderReceiver"
             android:enabled="true"
             android:exported="true">
