--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         </activity>
         <activity android:name=".LembretesActivity" />
         <activity android:name=".NovoLembreteActivity" />
+        <activity android:name=".EditarLembreteActivity" />
         <activity android:name=".HorarioActivity" />
         <activity android:name=".CalendarioActivity" />
 
